--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/node": "^18.0.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
     "framer-motion": "^4.1.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "socket.io-client": "^4.5.1",
     "typescript": "^4.7.4",
