--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
     "framer-motion": "^4.1.17",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "socket.io-client": "^4.5.1",
